# reddit-clone

./: .gitignore  Dockerfile  Procfile  cleanup_media.py  docker-compose.yml  jest.config.js  jest.setup.js  manage.py  migrate_media.py  migrate_media_fixed.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_all_tests.sh  run_all_tests_with_coverage.sh  settings.py  wsgi.py
.github/workflows/: test.yml
comments/: forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options_comment_downvotes_and_more.py  0002_comment_downvotes_comment_upvotes.py  0003_alter_comment_options_remove_comment_downvotes_and_more.py  0004_alter_comment_options_alter_comment_author_and_more.py
comments/tests/: test_basic.py  test_views.py
communities/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
communities/migrations/: 0001_initial.py
communities/tests/: test_basic.py  test_forms.py  test_views.py
coverage/: clover.xml  coverage-final.json  index.html  lcov.info
coverage/lcov-report/: base.css  base.js.html  comments.js.html  debug_upload.js.html  debug_votes.js.html  index.html  posts.js.html  share.js.html  voting.js.html
frontend/templates/: about.html  base.html  home.html  post_detail.html
frontend/tests/: helpers.js  setup.js
home/: views.py
home/migrations/: 0001_initial.py
home/tests/: test_basic.py
posts/: admin.py  cloudinary_fix.py  forms.py  models.py  urls.py  views.py
reddit_clone/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  urls.py  views.py
(+139 files in other folders)
