[tool.poetry]
name = "reddit-clone"
version = "0.1.0"
description = "Reddit clone built with Django"
authors = ["Nataliia Illiashenko <natalllyyy333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^2023.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"